# ros2_ws

./: .gitignore
src/m2_fsm_cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.xml
src/m2_fsm_cpp/.github/workflows/: ci-check.yaml  formatting-check.yaml
src/m2_fsm_cpp/cmake/modules/: m2_fsm_cpp_build_interface.cmake  m2_fsm_cpp_build_library.cmake  m2_fsm_cpp_define_selectors.cmake  m2_fsm_cpp_publish.cmake
src/m2_fsm_cpp/cmake/ros/: m2_fsm_cpp_ros_2_build_interface.cmake  m2_fsm_cpp_ros_2_build_library.cmake  m2_fsm_cpp_ros_2_publish.cmake
src/m2_fsm_cpp/code/: CMakeLists.txt
src/m2_fsm_cpp/code/include/m2_fsm_cpp/base/: fsm_command.h  fsm_command_instance_id_allocator.h  fsm_command_scheduler.h  fsm_define.h  fsm_id_allocator.h  fsm_robot.h  fsm_subsystem.h  fsm_subsystem_instance_id_allocator.h
src/m2_fsm_cpp/code/include/m2_fsm_cpp/commands/: fsm_command_group.h  fsm_functional_command.h  fsm_schedule_command.h  fsm_wait_command.h  fsm_wait_until_command.h
src/m2_fsm_cpp/code/src/: CMakeLists.txt
src/m2_fsm_cpp/code/src/base/: CMakeLists.txt  fsm_command.cpp  fsm_command_scheduler.cpp  fsm_subsystem.cpp
src/m2_fsm_cpp/code/src/commands/: CMakeLists.txt
src/m2_fsm_cpp/code/src/commands/composite/: CMakeLists.txt  fsm_parallel_command_group.cpp  fsm_sequential_command_group.cpp
src/m2_fsm_cpp/code/src/robots/: CMakeLists.txt
src/m2_fsm_cpp/code/src/robots/ros2/: CMakeLists.txt  fsm_ros2_ps_controller_robot.cpp  fsm_ros2_ps_mode.cpp  fsm_ros2_ps_mode_mux_robot.cpp  fsm_ros2_robot.cpp
src/m2_fsm_cpp/scripts/: clone.sh
src/m2_fsm_cpp/test/: CMakeLists.txt
src/m2_fsm_cpp/test/include/m2_fsm_cpp/test/: fsm_test.h  fsm_unittest.h
src/m2_fsm_cpp/test/main/: CMakeLists.txt  fsm_unittest_main.cpp
src/m2_fsm_cpp/test/unittest/: CMakeLists.txt
src/m2_fsm_cpp/test/unittest/base/: CMakeLists.txt  fsm_base_test.cpp  fsm_command_scheduler_test.cpp
src/m2_fsm_cpp/test/unittest/commands/: CMakeLists.txt  fsm_functional_command_test.cpp  fsm_schedule_command_test.cpp  fsm_wait_command_test.cpp  fsm_wait_until_command_test.cpp
src/m2_interfaces/: CMakeLists.txt  README.md  package.xml
src/m2_interfaces/action/: ActiveCasterAlign.action  ActiveCasterYawSinTraj.action
src/m2_interfaces/msg/: AdcBoardFeedback.msg  AdcPacket.msg  ChannelTwist.msg  EncoderImuStamped.msg  HBAOledButtons.msg  HBAOledDrawText.msg  IOBoardSetPos.msg  ImuQuat.msg  JoyData.msg  JoyRgbTime.msg  JoyRumble.msg  JoyTpad.msg
src/m2_interfaces/srv/: AlignChassis.srv  JoySetRgb.srv  SetAxisValue.srv  SetFloat32.srv  SetInt32.srv  SetPid.srv  SetPose.srv  SetString.srv  VescSetSinTrajParams.srv
src/m2_joy/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.xml
src/m2_joy/.github/workflows/: ci-check.yaml  formatting-check.yaml
src/m2_joy/cmake/modules/: m2_joy_build_interface.cmake  m2_joy_build_library.cmake  m2_joy_define_selectors.cmake  m2_joy_publish.cmake
src/m2_joy/cmake/ros/: m2_joy_ros_2_build_library.cmake  m2_joy_ros_2_publish.cmake
src/m2_joy/code/: CMakeLists.txt
src/m2_joy/code/src/: CMakeLists.txt
src/m2_joy/code/src/ros2/: CMakeLists.txt
src/m2_joy/config/: 20-kill-ds4-mouse.conf  ds4-data.yml  ds4-mouse-off.sh  gen_rules.py  setup.sh
src/m2_joy/launch/: joy_msg.launch.xml
src/m2_joy/scripts/: clone.sh
src/m2_sic_robot/: .gitignore  CMakeLists.txt  README.md  package.xml  useful_functions.md
src/m2_sic_robot/cmake/modules/: m2_sic_robot_build_interface.cmake  m2_sic_robot_build_library.cmake  m2_sic_robot_define_selectors.cmake  m2_sic_robot_publish.cmake
src/m2_sic_robot/cmake/ros/: m2_sic_robot_ros_2_build_library.cmake  m2_sic_robot_ros_2_publish.cmake
src/m2_sic_robot/code/: CMakeLists.txt
src/m2_sic_robot/code/scripts/: .template_node.py
src/m2_sic_robot/code/src/: CMakeLists.txt
src/m2_sic_robot/code/src/base/: CMakeLists.txt  sic_robot.cpp
src/m2_sic_robot/code/src/commands/: CMakeLists.txt
src/m2_sic_robot/code/src/modes/: CMakeLists.txt  manual_mode.cpp
src/m2_sic_robot/code/src/nodes/: CMakeLists.txt
src/m2_sic_robot/code/src/subsystem/: CMakeLists.txt  example_subsystem.cpp
src/m2_sic_robot/code/src/utils/: CMakeLists.txt
src/m2_sic_robot/launch/: all_launch.py  chassis_launch.py  fsm_launch.py  hardware_launch.py
src/m2_sic_robot/scripts/: clone.sh  set_zero.sh
src/m2_vesc/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  package.xml
src/m2_vesc/.github/workflows/: ci-check.yaml  formatting-check.yaml
src/m2_vesc/cmake/modules/: m2_vesc_build_interface.cmake  m2_vesc_build_library.cmake  m2_vesc_define_selectors.cmake  m2_vesc_publish.cmake
src/m2_vesc/cmake/ros/: m2_vesc_ros_2_build_library.cmake  m2_vesc_ros_2_publish.cmake
src/m2_vesc/code/: CMakeLists.txt
src/m2_vesc/code/include/m2_vesc/: vesc_device.hpp  vesc_fundamental.hpp
src/m2_vesc/code/src/: CMakeLists.txt  vesc_device.cpp
src/m2_vesc/code/src/comm/: CMakeLists.txt  vesc_comm.cpp  vesc_socketcan_comm.cpp
src/m2_vesc/code/src/ros2/: CMakeLists.txt
src/m2_vesc/scripts/: clone.sh
src/trolly/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.xml
src/trolly/.github/workflows/: ci-check.yaml  formatting-check.yaml
src/trolly/cmake/modules/: trolly_build_interface.cmake  trolly_build_library.cmake  trolly_define_selectors.cmake  trolly_publish.cmake
src/trolly/cmake/ros/: trolly_ros_2_build_library.cmake  trolly_ros_2_publish.cmake
src/trolly/code/: CMakeLists.txt
src/trolly/code/include/trolly/: trolly_any_ptr.h  trolly_errno.h  trolly_macro.h
src/trolly/code/src/: CMakeLists.txt  trolly_errno.cpp
src/trolly/code/src/math/: CMakeLists.txt  trolly_math_util.cpp
src/trolly/code/src/ros2/: CMakeLists.txt
src/trolly/scripts/: clone.sh
src/trolly/test/: CMakeLists.txt
src/trolly/test/main/: CMakeLists.txt  trolly_unittest_main.cpp
src/trolly/test/unittest/: CMakeLists.txt  trolly_any_ptr_test.cpp
src/trolly/test/unittest/math/: CMakeLists.txt  trolly_math_test.cpp
src/trolly/test/unittest/ros2/: CMakeLists.txt
(+178 files in other folders)
