<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m2_joy</name>
  <version>0.0.0</version>
  <description>Robot input with joystick controllers</description>
  <maintainer email="pthlivear227@gmail.com">Livear Pang</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>trolly</depend>
  <depend>m2_interfaces</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
