<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m2_sic_robot</name>
  <version>1.0.0</version>
  <description>Template package for robot FSM</description>
  <maintainer email="robocon@hku.hk">m2robocon</maintainer>
  <license>Proprietary</license>
  <url type="website">https://docs.m2stud.io</url>
  <url type="repository">https://github.com/m2robocon/m2_sic_robot</url>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>m2_interfaces</depend>
  <depend>trolly</depend>
  <depend>m2_fsm_cpp</depend>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
