<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m2_vesc</name>
  <version>1.0.0</version>
  <description>A simple skimmed-down version of VESC driver for ROS2 jazzy</description>
  <maintainer email="anthlaw@connect.hku.hk">Anthony Law</maintainer>
  <license>GPL</license>

  <depend>rclcpp</depend>
  <depend>trolly</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
