<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trolly</name>
  <version>1.0.0</version>
  <description>General purpose C++20 library for robotics purposes</description>
  <maintainer email="anthlaw@connect.hku.hk">Anthony Law</maintainer>
  <license>Proprietary</license>

  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
